made hello world a h1 and created a list

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    Hello World!
+   <h1>Hello World!</h1> 
+
+<ul>
+
+<li>a</li>
+<li>b</li>
+<li>c</li>
+
+</ul>
+
 </body>
 </html>
