--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
    <h1>Hello World!</h1> 
@@ -16,7 +17,7 @@
 <li>c</li>
 
 </ul>
-<button>Click me!</button>
+<button id="firstButton">Click me!</button>
 
 <script src="action.js"></script>
 
