added a working calculator with the options to add,substract,multiply and divide 2 values

--- a/index.html
+++ b/index.html
@@ -23,5 +23,21 @@
 
 <a href="./botmain.html"></a>
 
+
+<form>
+    Value 1: <input type="text" id="value1"><br>
+    Value 2: <input type="text" id="value2"><br>
+    Operator: 
+    <select id="operator">
+        <option value="add">Add</option>
+        <option value="min">Minus</option>
+        <option value="div">Divide</option>
+        <option value="mul">Multiply</option>
+    </select>
+    <button type="button" name="button" onclick="calc()">Calculate</button>
+</form>
+
+<div id="result"></div>
+
 </body>
 </html>
