finished chorebot and added a linked button to it from main index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
 <script src="action.js"></script>
 
-<a href="./botmain.html"></a>
+<button>
+    <a href="./botmain.html">ChoreBot Game!</a>
+</button> 
 
 
 <form>
